# cffetsyn

./: .gitignore  .gitmodules  AGENTS.md  README.md  SMTCellUCSD-2.0-cfet-3t-m0icpd.patch  pyproject.toml  requirements.txt
.cursor/agents/: cffet-cell-runner.md  cffet-constraint-auditor.md  cffet-layout-verifier.md  cffet-metrics-analyst.md
SMTCellUCSD-2.0/: .gitignore  LICENSE  Makefile  README.md  config.mk.example
SMTCellUCSD-2.0/doc/: SMTCell2_GUIDE.md
SMTCellUCSD-2.0/input/: pin_input_collection.json  pin_output_collection.json
SMTCellUCSD-2.0/input/cdl/: PROBE_2F4T.cdl
SMTCellUCSD-2.0/input/layer/: PROBE3_CFET_2F_3T_4530OF0.json  PROBE3_CFFET_2F_3T_4530OF0.json  PROBE3_CFFET_2F_4T_4530OF0.json  PROBE3_FinFET_2F_4T_4530OF0.json  PROBE3_QFET_2F_4T_4242OF21.json
SMTCellUCSD-2.0/input/mis/: smtcell.lyp
SMTCellUCSD-2.0/input/presets/: CFET_3T_SH.mk  CFET_4T_SH.mk  CFFET_3T_SH.mk  CFFET_4T_SH.mk  FinFET_4T_SH.mk  QFET_4T_SH.mk
SMTCellUCSD-2.0/scripts/: postsim_lvs_all_cffet_4t.sh  synth_all_cffet_4t.sh  synth_hard_long_cffet_4t.sh
SMTCellUCSD-2.0/src/: main.py
SMTCellUCSD-2.0/src/gui/: run.sh
SMTCellUCSD-2.0/src/utility/: genLEF.py
SMTCellUCSD-2.0/tests/: test_cffet_tier_utilization.py  test_mdi_split_gate.py
app/: __init__.py  main.py
app/templates/: index.html
docs/skills/cffet-layer-nomenclature/: SKILL.md
docs/skills/cffet-process-technology/: SKILL.md
docs/skills/cffet-synthesizer/: SKILL.md
docs/skills/notebooklm/: SKILL.md
docs/superpowers/plans/: 2026-06-26-cfet-3t-m0icpd.md  2026-06-27-cffet.md
tests/: test_main.py
(+59 files in other folders)
